--- a/Practica1/appsettings.json
+++ b/Practica1/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Sales": "Server=.;Database=salesdb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
