--- a/Practica1/Practica1.csproj
+++ b/Practica1/Practica1.csproj
@@ -29,5 +29,10 @@
   <ItemGroup>
     <Folder Include="Views\Customer\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="NLogConfig.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
